--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
       margin: 180px auto 60px;
       padding: 0 5%;
     }
+    <section class="philosophy-section">
+  <h3>企業理念</h3>
+  <p>
+    私たちは「お客様の未来を照らし、革新をもたらす企業であり続ける」ことを信念に、<br>
+    技術と創造力を活かして社会に貢献してまいります。
+  </p>
+</section>
+
     /* 企業概要 */
     .company-info {
       background-color: #ffffff;
