--- a/index.html
+++ b/index.html
@@ -82,13 +82,6 @@
       margin: 180px auto 60px;
       padding: 0 5%;
     }
-    <section class="philosophy-section">
-  <h3>企業理念</h3>
-  <p>
-    私たちは「お客様の未来を照らし、革新をもたらす企業であり続ける」ことを信念に、<br>
-    技術と創造力を活かして社会に貢献してまいります。
-  </p>
-</section>
 
     /* 企業概要 */
     .company-info {
@@ -231,7 +224,6 @@
   </style>
 </head>
 <body>
-
   <!-- ヘッダー -->
   <header>
     <div class="logo-container">
@@ -248,7 +240,6 @@
 
   <!-- メインコンテンツ -->
   <main>
-
     <!-- 企業概要 -->
     <section class="company-info">
       <h3>企業概要</h3>
@@ -265,7 +256,6 @@
         <p><strong>URL：</strong>https://www.〇〇〇</p>
       </div>
     </section>
-
     <!-- 社員紹介 -->
     <section class="team-section">
       <h3>社員紹介</h3>
@@ -304,13 +294,12 @@
         </div>
       </div>
     </section>
-
     <!-- 採用情報 -->
     <section class="recruit-section">
       <h3>採用情報</h3>
       <p>私たちは共に未来を創る仲間を募集しています。</p>
       <p>エンジニア、営業、マーケティングなど、さまざまな職種で人材を募集中です。</p>
-      <a href="#">応募はこちらから</a>
+      <a href="saiyou.html">応募はこちらから</a>
     </section>
 
   </main>
