--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     /* 企業理念の横流し */
     .company-vision-wrapper {
       position: fixed;
-      top: 100px;
+      top: 80px;
       width: 100%;
       background-color: #fff3b0;
       padding: 12px 0;
@@ -79,7 +79,7 @@
 
     main {
       max-width: 1100px;
-      margin: 180px auto 60px;
+      margin: 140px auto 60px; /* ヘッダー80 + 横流し60 = 140 */
       padding: 0 5%;
     }
 
@@ -112,118 +112,10 @@
         grid-template-columns: 1fr;
       }
     }
-
-    /* 社員紹介 */
-    .team-section {
-      margin-bottom: 80px;
-    }
-
-    .team-section h3 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.2rem;
-      color: #005f73;
-      margin-bottom: 32px;
-      text-align: center;
-    }
-
-    .team-members {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
-    .team-member {
-      background-color: #ffffff;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .team-member:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 12px 30px rgba(0,0,0,0.15);
-    }
-
-    .team-member .photo {
-      width: 100%;
-      aspect-ratio: 1 / 1;
-      background-color: #e0f7fa;
-      overflow: hidden;
-    }
-
-    .team-member .photo img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    .team-member .info {
-      padding: 20px;
-      text-align: center;
-    }
-
-    .team-member .info h4 {
-      font-size: 1.4rem;
-      color: #003049;
-    }
-
-    .team-member .info .role {
-      font-size: 1rem;
-      color: #005f73;
-      margin-bottom: 10px;
-    }
-
-    .team-member .info .desc {
-      font-size: 0.95rem;
-      color: #444;
-      line-height: 1.5;
-    }
-
-    /* 採用情報 */
-    .recruit-section {
-      margin-bottom: 80px;
-    }
-
-    .recruit-section h3 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.2rem;
-      color: #003566;
-      margin-bottom: 24px;
-    }
-
-    .recruit-section p {
-      font-size: 1rem;
-      color: #333;
-      margin-bottom: 16px;
-    }
-
-    .recruit-section a {
-      display: inline-block;
-      background-color: #0077b6;
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
-    .recruit-section a:hover {
-      background-color: #023e8a;
-    }
-
-    /* フッター */
-    footer {
-      background-color: #f1f1f1;
-      color: #888;
-      text-align: center;
-      padding: 30px 5%;
-      border-top: 1px solid #ccc;
-      font-size: 0.9rem;
-    }
   </style>
 </head>
 <body>
+
   <!-- ヘッダー -->
   <header>
     <div class="logo-container">
@@ -238,8 +130,8 @@
     </div>
   </div>
 
-  <!-- メインコンテンツ -->
   <main>
+
     <!-- 企業概要 -->
     <section class="company-info">
       <h3>企業概要</h3>
